Buttons and text added in html file.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Pomodoro</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Pomodoro Timer</h1>
+        <p class="timer" id="timer-tag">25:00</p>
+        <div class="button-wrapper">
+            <button id="start">Start</button>
+            <button id="stop">Stop</button>
+            <button id="pause">Pause</button>
+            <button id="reset">Reset</button>
+        </div>
+    </div>
 </body>
 </html>
