Javascript has been started and functions created but not finished. Const have been declared and targeted ID's accordingly.

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
             <button id="reset">Reset</button>
         </div>
     </div>
+    <script src="./js/index.js"></script>
 </body>
 </html>
