Changed JS so that you have time formatted when counting down by adding 0's by using padStart.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <h1>Pomodoro Timer</h1>
-        <p class="timer" id="timer-tag">25:00</p>
+        <p class="timer" id="timer">25:00</p>
         <div class="button-wrapper">
             <button id="start">Start</button>
             <button id="stop">Stop</button>
