Timer is now working, I need to add a random quote generator in the project.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
         <p class="timer" id="timer">25:00</p>
         <div class="button-wrapper">
             <button id="start">Start</button>
-            <button id="stop">Stop</button>
-            <button id="pause">Pause</button>
+            <button id="stop">Stop / Pause</button>
             <button id="reset">Reset</button>
         </div>
+    </div>
+    <div id="quote-container">
+        <h2>Quote of the Day</h2>
+        <blockquote class="quote"></blockquote>
+        <button class="new-quote-button">New Quote</button>
     </div>
     <script src="./js/index.js"></script>
 </body>
